resources/[Esx]/[ui]/esx_menu_default/html/css/app.css
@font-face {
  font-family: bankgothic;
  src: url('../fonts/bankgothic.ttf');
}

@font-face {
  font-family: pcdown;
  src: url('../fonts/pdown.ttf');
}
.menu {	
  border-color: black;
  border-style: solid;
  border-bottom-left-radius : 0px 0px;
  border-bottom-right-radius : 0px 0px;	
  border-radius: 20px;			
  font-family: bankgothic;  
  min-width  : 350px;
  box-shadow : 0px 0px 50px 0px #000;
  position   : absolute;
  opacity: 0.9; 
}

.menu.align-left {
  left: 45px;
  top : 50%;
  transform: translate(0, -50%); 
}

.menu.align-top-left {
  left: 47px;
  top : 60px;   
}

.menu.align-top-haut {
  left: 47px;
  top : 40px;  
}

.menu.align-top {
  left: 50%;
  top : 60px;
  transform: translate(-50%, 0); 
}

.menu.align-top-right {
  right: 10px;
  top  : 60px;
}

.menu.align-right {
  right: 45px;
  top  : 50%;
  transform: translate(0, -50%); 
}

.menu.align-bottom-right {
  left: 45px;
  top : 60px;
}

.menu.align-bottom {
  left  : 50%;
  bottom: 40px;
  transform: translate(-50%, 0); 
}

.menu.align-bottom-left {
  left  : 45px;
  bottom: 40px;
}

.menu.align-center {
  left : 50%;
  top  : 50%;
  transform: translate(-50%, -50%); 
}

.menu .head {
  font-family: pcdown;	
  font-size: 0%;
  color: white;
  border-top-left-radius : 15px 15px;
  border-top-right-radius : 15px 15px;
  background:url('http://s9.picofile.com/file/8358366800/222222222.png');
  text-align      : center;
  height          : 85px;
  line-height     : 70px;
}

.menu .text {
  font-family: pcdown;
  height          : 40px;
  display         : block;
  background-color: #f1f1f1;
  box-shadow      : inset 1px 0px 0px 1px #b8b8b8;
  height          : 38px;
  line-height     : 38px;
   text-align   : center; 
  color           : #3A3A3A;
  opacity: 0.7;  
}

.menu .menu-items {	 
  border-bottom-left-radius : 20px 20px;
  border-bottom-right-radius : 20px 20px;	
  max-height : 600px;
  overflow-y : auto; 
  opacity: 0.7;   
}

.menu .menu-items .menu-item {		
  height          : 40px;
  display         : block;
  background-color: #f1f1f1;
  box-shadow      : inset 1px 0px 0px 1px #b8b8b8;
  height          : 38px;
  line-height     : 38px;
  color           : #3A3A3A;
  text-align      : center;
}

.menu .menu-items .menu-item.selected {  
  background-color: #d0d0d0;
}

